Enhance frontend table with RSS feed names and duration
- Add RSS Feed column showing actual feed names (Lenn's Rachitsky, How I AI, Peter Yang)
- Add Length column with formatted duration (HH:MM:SS)
- Update database schema to link episodes to RSS feeds
- Enhance feed processor to pass feed information when creating episodes
- Update docker-compose.yml to mount updated files
- Improve table layout with all 6 requested columns:
  1. Title
  2. RSS Feed (shows feed names or 'Manual Entry')
  3. Length (formatted duration)
  4. Status
  5. Submitted
  6. Actions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - ./data:/app/data
       - ./.env:/app/.env
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./database.py:/app/database.py
+      - ./feed_processor.py:/app/feed_processor.py
     environment:
       - MONGO_CONNECTION_STRING=mongodb://mongo:27017/
       - FLASK_ENV=development
@@ -46,6 +48,8 @@ services:
     volumes:
       - ./data:/app/data
       - ./.env:/app/.env
+      - ./database.py:/app/database.py
+      - ./feed_processor.py:/app/feed_processor.py
     environment:
       - MONGO_CONNECTION_STRING=mongodb://mongo:27017/
       - OPENAI_API_KEY=${OPENAI_API_KEY}
