--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - ./database.py:/app/database.py
       - ./feed_processor.py:/app/feed_processor.py
     environment:
-      - MONGO_CONNECTION_STRING=mongodb://mongo:27017/
+      - MONGO_CONNECTION_STRING=${MONGO_CONNECTION_STRING}
       - FLASK_ENV=development
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
@@ -51,7 +51,7 @@ services:
       - ./database.py:/app/database.py
       - ./feed_processor.py:/app/feed_processor.py
     environment:
-      - MONGO_CONNECTION_STRING=mongodb://mongo:27017/
+      - MONGO_CONNECTION_STRING=${MONGO_CONNECTION_STRING}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
       - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
@@ -72,7 +72,7 @@ services:
       - ./data:/app/data
       - ./.env:/app/.env
     environment:
-      - MONGO_CONNECTION_STRING=mongodb://mongo:27017/
+      - MONGO_CONNECTION_STRING=${MONGO_CONNECTION_STRING}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - LANGFUSE_SECRET_KEY=${LANGFUSE_SECRET_KEY}
       - LANGFUSE_PUBLIC_KEY=${LANGFUSE_PUBLIC_KEY}
